--- a/MyMusic.API/appsettings.json
+++ b/MyMusic.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Default": "Server=DESKTOP-GEFAL09;Database=MusicDB;Integrated Security=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
